chore: General refactor and cleanup
Rename API files, cleanup model references, update `openapi.json` spec.
